--- a/style.css/style.css
+++ b/style.css/style.css
@@ -1,24 +1,24 @@
 body{
-    background-color: black;
-    color: rgb(125, 5, 5);
+    background-color: rgb(12, 191, 236);
+    color: rgb(189, 13, 233);
     margin: 0px;
 }
 
 header{
-    border-bottom: inset 3px rgb(231, 236, 93);
+    border-bottom: inset 3px rgb(18, 189, 241);
     padding: 15px;
     font-size: 30px;
-    color: rgb(240, 207, 16)
+    color: rgb(16, 188, 240)
 }
 
 h1{
     padding: 10px;
     font-size: 20px;
-    color: rgb(255, 13, 0)
+    color: rgb(0, 255, 179)
 }
 
 p{
     padding: 5px;
     font-size: 15px;
-    color: rgb(154, 144, 144)
+    color: rgb(127, 23, 245)
 }
